--- a/index.html
+++ b/index.html
@@ -7,30 +7,23 @@
 </head>
 <body>
 <form method="post" href="index.html">
-    <div class="mb-3" id="selectDiv">
-        <label for="selectInputElm" class="form-label">Please choose a chapter:</label>
-        <input type="text" class="form-control search-select-name" id="selectInputElm" autocomplete="off">
-        <input type="hidden" class="search-select-value" name="dropdownValueId">
-        <div class="dropdown">
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            </ul>
-        </div>
+    <div class="mb-3 search-select-div">
+        <label for="selectElm" class="form-label">Please choose a chapter:</label>
+        <select id="selectElm" name="chapterId">
+            <option value="1">Erstes</option>
+            <option value="2">Zweites</option>
+            <option value="3">Drittes</option>
+            <option value="4">Viertes</option>
+            <option value="5">Fünftes</option>
+            <option value="6">Sechstes</option>
+            <option value="7">Siebtes</option>
+            <option value="8">Achtes</option>
+        </select>
     </div>
     <button type="submit" class="btn btn-primary">Send</button>
 </form>
 
 </body>
 <script src="js/vendor/bootstrap.bundle.js"></script>
-<script>
-    const dropdownItems = [
-        {value: 1, name: 'Erstes', id: 'item1'},
-        {value: 2, name: 'Zweites', id: 'item2'},
-        {value: 3, name: 'Drittes', id: 'item3'},
-        {value: 4, name: 'Viertes', id: 'item4'},
-        {value: 5, name: 'Fünftes', id: 'item5'},
-        {value: 6, name: 'Sechstes', id: 'item6'},
-        {value: 7, name: 'Siebtes', id: 'item7'},
-    ];
-</script>
 <script src="js/searchSelect.js"></script>
 </html>
