Split the JS file.

--- a/public/index.html
+++ b/public/index.html
@@ -26,4 +26,5 @@
 </body>
 <script src="js/vendor/bootstrap.bundle.js"></script>
 <script src="js/searchSelect.js"></script>
+<script src="js/index.js"></script>
 </html>
