The initially selected option is now shown.

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 <form method="post" href="index.html">
     <div class="mb-3 search-select-div">
         <label for="selectElm" class="form-label">Please choose a chapter:</label>
-        <select id="selectElm" name="chapterId">
+        <select id="selectElm" name="chapterId" class="form-select">
             <option value="1">Erstes</option>
             <option value="2">Zweites</option>
             <option value="3">Drittes</option>
             <option value="4">Viertes</option>
-            <option value="5">Fünftes</option>
+            <option value="5" selected>Fünftes</option>
             <option value="6">Sechstes</option>
             <option value="7">Siebtes</option>
             <option value="8">Achtes</option>
