Disabled implicit submission of the form.

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             <option value="8">Achtes</option>
         </select>
     </div>
+    <button type="submit" disabled style="display: none" aria-hidden="true"></button>
     <button type="submit" class="btn btn-primary">Send</button>
 </form>
 
